--- a/mandela_effect.org
+++ b/mandela_effect.org
@@ -109,6 +109,9 @@ google -> Google
 grandad -> granddad
 
 
+enterprize -> enterprise
+
+
 * 科技历史提前：
 彩色照片提前
 https://www.youtube.com/watch?v=YRpKykXYUO8
@@ -491,6 +494,10 @@ https://baike.baidu.com/item/%E7%81%AB%E7%83%A7%E5%9C%86%E6%98%8E%E5%9B%AD/16077
 ai zeng（四声）->ai zeng(一声）
 
 
+吮吸:
+yun xi -> shun xi
+
+
 
 兵来将挡,水来土囤->兵来将挡,水来土掩
 
@@ -507,3 +514,13 @@ ai zeng（四声）->ai zeng(一声）
 致远舰先手:
 撞击吉野号->撞击日本联合舰队的本队
 http://military.china.com/history4/62/20161230/30129561_all.html
+
+
+
+野生蜜蜂蜂巢:
+有外壳->没有外壳
+
+
+
+word文档编辑：
+注脚－》脚注
